[tool.poetry]
name = "quick-token"
version = "0.1.0"
description = ""
authors = ["James Allen-Robertson <minyall@gmail.com>"]
readme = "README.md"
packages = [{include = "quick-token"}]
package-mode = true

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
tqdm = "^4.66.5"
gensim = "^4.3.3"
spacy = "3.7.5"
en_core_web_md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1.tar.gz"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
